--- a/scss/_Sobre a Kabi.scss
+++ b/scss/_Sobre a Kabi.scss
@@ -115,10 +115,6 @@
         /* width: calc(100% - 620px - 104px); */
     }
 
-
-    .cat-contact{
-        
-    }
     &__img{
         width: 100%;
         max-height: 1092px;
