--- a/scss/_button.scss
+++ b/scss/_button.scss
@@ -51,4 +51,27 @@
         }
     }
 
+    &-height{
+        padding-top: 8px;
+        padding-bottom: 8px;
+        padding-left: 24px;
+        padding-right: 24px;
+        display: flex;
+        align-items: center;
+        background: none;
+        color:$orange;
+
+        &--orange{
+            color:$white;
+            background-color:$orange;
+            padding-top: 8px;
+            padding-bottom: 8px;
+            padding-left: 24px;
+            padding-right: 24px;
+            display: flex;
+            align-items: center;
+            border-radius: 8px;
+        }
+    }
+
 }
